style(themebuilder): fix colorscale alignment

--- a/apps/theme/components/Colors/Colors.module.css
+++ b/apps/theme/components/Colors/Colors.module.css
@@ -2,17 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
+  gap: var(--ds-size-4);
   margin: 8px 0;
   width: 100%;
   max-width: 1390px;
+  justify-content: space-between;
 }
 
 .row {
   display: flex;
   align-items: end;
   justify-content: space-between;
-  gap: 8px;
+  gap: var(--ds-size-2);
   width: 100%;
 }
 
